tests/language/syntax/errors/missing-closing-bracket.zena
// @target: statement
let x = [1, 2; // @error: Expected ','|Expected '\]'
